--- a/aboutus.html
+++ b/aboutus.html
@@ -109,16 +109,19 @@
                 <h3>Community Partners</h3>
                 <!-- Accordion Style Presentation-->
                 <div id="accordion">
-                    <div role="tab" class="card-header">
-                        <h4>
-                            <a data-toggle="collapse" data-target="#bootstrap">
-                                Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
-                            </a>
-                        </h4>
-                        <div class="collapse show" id="bootstrap" data-parent="#accordion">
-                            <div class="card-body">
-                                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at
-                                    prices you can't beat.</p>
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h4>
+                                <a data-toggle="collapse" data-target="#bootstrap">
+                                    Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
+                                </a>
+                            </h4>
+                            <div class="collapse show" id="bootstrap" data-parent="#accordion">
+                                <div class="card-body">
+                                    <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you
+                                        need at
+                                        prices you can't beat.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
