--- a/index_code_challenge.html
+++ b/index_code_challenge.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/mystyles.css" />
+    <link rel="stylesheet" href="code_challenge_css/mystyles.css" />
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -31,150 +31,13 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <!-- button for reserve form modal -->
-                    <span class="navbar-text ml-auto">
-                        <a roll="button" data-toggle="modal" data-target="#reserveModal" class="btn btn-lg btn-info">
-                            Reserve Campsite</a>
-                    </span>
-
-                    <!-- Removed in-page form button & tooltip 
                     <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip"
                         data-placement="bottom" data-html="true"
                         title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
-                    -->
                 </div>
             </div>
         </div>
     </header>
-
-    <!-- Content for reservation form modal-->
-    <div id="reserveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-info">
-                    <h3 class="modal-title text-white">Reserve a Campsite</h3>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form id="reserveForm">
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label" for="numCampers">Number of Campers</label>
-                                <div class="col-sm-6">
-                                    <select class="form-control" id="numCampers" name="numCampers">
-                                        <option value="">Select...</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <!-- date row -->
-                                <label for="date" class="col-sm-6 col-form-label">Date</label>
-                                <div class="col-sm-6">
-                                    <input class="col form-control" type="date" id="date" name="date"
-                                        placeholder="mm/dd/yy" />
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <!-- tent/rv row -->
-                                <label for="siteType" class="col-sm-6 col-form-label">Campsite Type</label>
-                                <div class="col btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success active">
-                                        <input type="radio" name="siteType" id="siteTent" autocomplete="off"
-                                            checked>Tent
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        <input type="radio" name="siteType" id="siteRV" autocomplete="off" />RV
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col">
-                                    <button type="button" class="btn btn-secondary btn-sm ml-auto"
-                                        data-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-sm btn-primary">Search</button>
-                                </div>
-                            </div>
-                        </form>
-                        <!-- login-form for reference DELETE ME
-                        <form>
-                            <div class="form-row">
-                                <div class="form-group col-12">
-                                    <label class="sr-only" for="loginEmail">Email address</label>
-                                    <input type="email" class="form-control form-control-sm" id="loginEmail"
-                                        placeholder="Enter email">
-                                </div>
-                                <div class="form-group col-12">
-                                    <label class="sr-only" for="loginPassword">Password</label>
-                                    <input type="password" class="form-control form-control-sm" id="loginPassword"
-                                        placeholder="Password">
-                                </div>
-                                <div class="col">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label"> Remember me
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <button type="button" class="btn btn-secondary btn-sm ml-auto"
-                                    data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
-                            </div>
-                        </form>
-                        -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- On page reservation form disabled
-    <div class="row row-content align-items-center">
-        <div class="col-sm-6 mx-auto">
-            <div class="card">
-                <h3 class="card-header text-white bg-info">
-                    Reserve a Campsite</h3>
-                <div class="card-body">
-                    <form id="reserveForm">
-                        <div class="row form-group">
-                            <label class="col-sm-6 col-form-label" for="numCampers">Number of Campers</label>
-                            <div class="col-sm-6">
-                                <select class="form-control" id="numCampers" name="numCampers">
-                                    <option value="">Select...</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="row form-group">
-                            <label for="date" class="col-sm-6 col-form-label">Date</label>
-                            <div class="col-sm-6">
-                                <input class="col form-control" type="date" id="date" name="date"
-                                    placeholder="mm/dd/yy" />
-                            </div>
-                        </div>
-                        <div class="row form-group">
-                            <div class="col">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    -->
-
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
@@ -201,8 +64,7 @@
             </div>
         </div>
     </nav>
-
-    <!-- Content for login modal dialog-->
+    <!-- Content for modal dialog-->
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -349,7 +211,6 @@
             </div>
         </div>
 
-        <!-- On page reservation form disabled
         <div class="row row-content align-items-center">
             <div class="col-sm-6 mx-auto">
                 <div class="card">
@@ -386,10 +247,9 @@
                         </form>
                     </div>
                 </div>
+
             </div>
         </div>
-        -->
-
     </div>
 
     <footer class="site-footer">
@@ -430,12 +290,9 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
-        // tooltip disabled 
-        /*
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
-        */
     </script>
 </body>
 
