--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
                                 <label for="siteType" class="col-sm-6 col-form-label">Campsite Type</label>
                                 <div class="col btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-success active">
-                                        <input type="radio" name="siteType" id="siteTent" autocomplete="off"
-                                            checked>Tent
+                                        <input type="radio" value="tent" name="siteType" id="siteTent"
+                                            autocomplete="off" checked>Tent
                                     </label>
                                     <label class="btn btn-primary">
-                                        <input type="radio" name="siteType" id="siteRV" autocomplete="off" />RV
+                                        <input type="radio" value="rv" name="siteType" id="siteRV"
+                                            autocomplete="off" />RV
                                     </label>
                                 </div>
                             </div>
