--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <!-- Carousel Play/Pause Buttons (Currently Disabled) 
                     <div class="btn-group" id="carouselButton">
                         <button class="btn btn-danger btn-sm" id="carouselPause">
                             <i class="fa fa-pause"></i>
@@ -235,6 +236,11 @@
                             <i class="fa fa-play"></i>
                         </button>
                     </div>
+                    --> 
+                    <!-- Carousel Play/Pause single button toggle -->
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <i class="fa fa-pause"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -370,21 +376,35 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script> // used to enable tooltips through bootstrap (Currently disabled)
-        /*
-        $(function () {
+    <script>// used to enable tooltips through bootstrap (Currently disabled) 
+    /*  $(function () {
             $('[data-toggle="tooltip"]').tooltip()
-        })
-        */
+        }) */
     </script>
-    <script> // jquery controls for carousel
-        $(function() {
+    <script>// jquery controls for carousel verson 1 (Currently Disabled) 
+        /*$(function() {
             $(".carousel").carousel( { interval: 2000 } );
             $("#carouselPause").click(function(){
                 $(".carousel").carousel("pause");
             });
             $("#carouselPlay").click(function(){
                 $(".carousel").carousel("cycle");
+            });
+        });*/
+    </script>
+    <script> // jQuery Play Pause Toggle Single Button
+        $(function() {
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+                    $(".carousel").carousel("pause");
+                    $("#carouselButton").children("i").removeClass("fa-pause");
+                    $("#carouselButton").children("i").addClass("fa-play");
+                } else {
+                    $(".carousel").carousel("cycle");
+                    $("#carouselButton").children("i").removeClass("fa-play");
+                    $("#carouselButton").children("i").addClass("fa-pause"); 
+                }
             });
         });
     </script>
