--- a/index.html
+++ b/index.html
@@ -376,38 +376,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>// used to enable tooltips through bootstrap (Currently disabled) 
-    /*  $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        }) */
-    </script>
-    <script>// jquery controls for carousel verson 1 (Currently Disabled) 
-        /*$(function() {
-            $(".carousel").carousel( { interval: 2000 } );
-            $("#carouselPause").click(function(){
-                $(".carousel").carousel("pause");
-            });
-            $("#carouselPlay").click(function(){
-                $(".carousel").carousel("cycle");
-            });
-        });*/
-    </script>
-    <script> // jQuery Play Pause Toggle Single Button
-        $(function() {
-            $(".carousel").carousel( { interval: 2000 } );
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
-                    $(".carousel").carousel("pause");
-                    $("#carouselButton").children("i").removeClass("fa-pause");
-                    $("#carouselButton").children("i").addClass("fa-play");
-                } else {
-                    $(".carousel").carousel("cycle");
-                    $("#carouselButton").children("i").removeClass("fa-play");
-                    $("#carouselButton").children("i").addClass("fa-pause"); 
-                }
-            });
-        });
-    </script>
+    <script src="js/myscripts.js"></script>
 </body>
 
 </html>
